--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <form class="w-75 mx-auto">
+    <!-- <form class="w-75 mx-auto">
 
         <p class="mt-3">以下に予約情報を入力して送信ボタンを押してください！</p>
 
@@ -45,7 +45,7 @@
         </div>
 
         <input type="submit" class="mt-4 btn btn-primary" value="送信">
-    </form>
+    </form> -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -53,7 +53,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script src="static/liff.js"></script>
-    <script src="static/index.js"></script>
+    <!-- <script src="static/index.js"></script> -->
 </body>
 
 </html>
