fix: コード修正

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <input type="date" class="form-control" />
       </div>
       <button class="form-control open-camera-btn">カメラを起動する</button>
-      <button type="submit" class="mt-4 btn btn-primary">登録する</button>
+      <button type="submit" class="mt-4 btn btn-primary submit-btn">
+        登録する
+      </button>
     </form>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
