--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <form class="w-75 mx-auto">
       <h2 class="mt-3">ユーザー登録</h2>
 
-      <p class="mt-3">名前</p>
+      <p class="mt-3">氏名</p>
       <div>
         <input class="form-control" type="text" />
       </div>
