--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <form class="w-75 mx-auto">
-      <h2 class="mt-3">ユーザー登録する</h2>
+      <h2 class="mt-3">ユーザー登録</h2>
 
       <p class="mt-3">氏名</p>
       <div>
