--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <!-- <form class="w-75 mx-auto">
+    <form class="w-75 mx-auto">
       <h2 class="mt-3">ユーザー登録</h2>
 
       <p class="mt-3">氏名</p>
@@ -37,7 +37,7 @@
       <button type="submit" class="mt-4 btn btn-primary submit-btn">
         登録する
       </button>
-    </form> -->
+    </form>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
