--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <form class="w-75 mx-auto">
-      <h2 class="mt-3">ユーザー登録</h2>
+      <h2 class="mt-3">ユーザー登録する</h2>
 
       <p class="mt-3">氏名</p>
       <div>
@@ -33,7 +33,9 @@
       <div id="form-number" class="btn-group btn-group-toggle w-100">
         <input type="date" class="form-control" />
       </div>
-      <button class="form-control open-camera-btn">カメラを起動する</button>
+      <button type="button" class="form-control open-camera-btn">
+        カメラを起動する
+      </button>
       <button type="submit" class="mt-4 btn btn-primary submit-btn">
         登録する
       </button>
