--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       </div>
 
       <p class="mt-3">生年月日</p>
-      <div id="form-number" class="btn-group btn-group-toggle w-100">
+      <div>
         <input type="date" class="form-control" />
       </div>
-      <button type="button" class="form-control open-camera-btn">
+      <button type="button" class="mt-4 btn btn-secondary open-camera-btn">
         カメラを起動する
       </button>
       <button type="submit" class="mt-4 btn btn-primary submit-btn">
